# Test_task_Samsung

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
shaders/: object.frag  object.vert
src/: Application.cpp  Application.h  DirLighting.h  GameObject.cpp  GameObject.h  MotionState.cpp  MotionState.h  Object.cpp  Object.h  Shader.cpp  Shader.h  ShadowMap.cpp  ShadowMap.h  main.cpp
